@@ -802,6 +802,7 @@ _ecore_win32_event_keystroke_get(int    key,
        kn = "space";
        ks = "space";
        kc = "space";
+       break;
      case VK_F1:
        kn = "F1";
        ks = "F1";
